--- a/css/contactMe.css
+++ b/css/contactMe.css
@@ -63,6 +63,7 @@
     border-left: none;
     border-right: none;
     border-bottom: 2px solid black;
+    border-radius: 0px;
     background: none;
 
     font-family: Satoshi, serif;
@@ -78,6 +79,7 @@
     border-left: none;
     border-right: none;
     border-bottom: 2px solid black;
+    border-radius: 0;
     background: none;
     resize: none;
 
