--- a/css/carrerMap_component.css
+++ b/css/carrerMap_component.css
@@ -8,7 +8,7 @@
     height: 370px;
     padding: 25px;
     background-color: #C2A33B;
-    overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 .container_card{
